# union_bug

./: .dockerignore  .eslintrc.js  .gitignore  Cargo.toml  Dockerfile  Dockerfile.devcontainer  README.md  babel.config.js  build_vars.sh  fly.toml  package.json  tsconfig.json  webpack.config.js
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
frontend/: AppLayout.tsx  AppRoutes.tsx  AppWrapper.tsx  ImageCropper.tsx  IndexPage.tsx  MakeAvatarContext.tsx  OverlayPicker.tsx  ResultModal.tsx  UploadImageInput.tsx  fetchUtils.ts  index.ts  index.tsx  overlay.ts
frontend/components/: Button.tsx  ImageCropper.tsx  OverlayPicker.tsx  Spinner.tsx  UploadImageInput.tsx  WizardNavigation.tsx
frontend/pages/: ChooseOverlayPage.tsx  CropImagePage.tsx  StartPage.tsx
public/: index.html  index.js
public/assets/: index.css  index.js  index.js.LICENSE.txt
src/: assets.rs  image_processing.rs  index.html  main.rs
src/actions/: composite.rs  frontend.rs  mod.rs  overlays.rs
