[package]
edition = "2021"
name = "union_bug"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "union_bug"
path = "src/main.rs"

[dependencies]
axum = {version = "0.6.1", features = ["multipart"]}
axum-macros = "0.3.0"
futures = "0.3.25"
image = {version = "0.24.5", features = ["avif-decoder"]}
once_cell = "1.16.0"
serde = {version = "1.0.150", features = ["derive"]}
tokio = {version = "1.23.0", features = ["macros", "rt-multi-thread", "signal"]}
tower = "0.4.13"
tower-http = {version = "0.3.5", features = ["catch-panic", "trace"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
