[package]
edition = "2021"
name = "union_bug"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "union_bug"
path = "src/main.rs"

[dependencies]
axum = {version = "0.6.1", features = ["multipart"]}
axum-macros = "0.3.0"
dav1d = "0.6.1"
futures = "0.3.25"
hyper = {version = "0.14.23", features = ["client"]}
image = {version = "0.24.5", features = ["avif-decoder"]}
include_dir = "0.7.3"
maplit = "1.0.2"
mime_guess = "2.0.4"
once_cell = "1.16.0"
serde = {version = "1.0.150", features = ["derive"]}
tokio = {version = "1.24.2", features = ["macros", "rt-multi-thread", "signal"]}
tower = "0.4.13"
tower-http = {version = "0.3.5", features = ["catch-panic", "compression-deflate", "compression-gzip", "compression-br", "trace"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
